<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="afeka.katz.arkadiy.easyhr.activities.fragments.CompanyInfoFragment"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/company_data_title"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:id="@+id/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_alignBaseline="@id/title"
        android:id="@+id/company_data_form">
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/company_data_name"
            style="@style/user_data_edit_text"
            android:id="@+id/company_data_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shifts"
            android:textAlignment="center"
            android:textSize="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shift"
            android:layout_gravity="center"
            android:id="@+id/add_shift"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:id="@+id/company_data_add"/>

</RelativeLayout>
