<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="afeka.katz.arkadiy.easyhr.activities.fragments.UserInfoFragment"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/user_data_title"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:id="@+id/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_alignBaseline="@id/title"
        android:id="@+id/user_data_form">
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/user_data_first_name"
            style="@style/user_data_edit_text"
            android:id="@+id/user_data_first_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/user_data_last_name"
            style="@style/user_data_edit_text"
            android:id="@+id/user_data_last_name"/>
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="@style/user_data_edit_text"-->
            <!--android:id="@+id/user_data_email"-->
            <!--android:hint="@string/user_data_email"/>-->
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:id="@+id/sign_in"/>
</RelativeLayout>
